# optitrack-gazebo

./: Makefile.am  README.adoc  configure.ac  optitrack-gazebo.pc.in
src/: natnet.cc  natnet.h  plugin.cc
